<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPedido">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="67dp">

        <EditText
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_cliente"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_data"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/labelListaProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_lista_de_produtos" />

        <ListView
            android:id="@+id/listViewProdutos"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <EditText
            android:id="@+id/txtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_valor"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/labelListaPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_lista_de_pedidos" />

        <ListView
            android:id="@+id/listViewPedidos"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="adicionar"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_editar" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="deletar"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>